tests/ui/const-generics/fn-const-param-infer.full.stderr
error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-infer.rs:6:25
   |
LL | struct Checked<const F: fn(usize) -> bool>;
   |                         ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/fn-const-param-infer.rs:23:24
   |
LL |     let _ = Checked::<{generic_arg::<u32>}>;
   |                        ^^^^^^^^^^^^^^^^^^ expected fn pointer, found fn item
   |
   = note: expected fn pointer `fn(usize) -> _`
                 found fn item `fn(u32) -> _ {generic_arg::<u32>}`

error[E0282]: type annotations needed
  --> $DIR/fn-const-param-infer.rs:25:23
   |
LL |     let _ = Checked::<generic>;
   |                       ^^^^^^^ cannot infer type of the type parameter `T` declared on the function `generic`
   |
help: consider specifying the generic argument
   |
LL |     let _ = Checked::<generic::<T>>;
   |                              +++++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0282, E0308, E0741.
For more information about an error, try `rustc --explain E0282`.
